k8s/fiboapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiboapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: fiboapi
          image: vikalf/fiboform.api:v2.1
          ports:
            - containerPort: 80
