k8s/fiboweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiboweb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: fiboweb
          image: vikalf/fiboform.web:v2.1
          ports:
            - containerPort: 80
